--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
        const loader = document.getElementById('loader');
        const mainScreen = document.getElementById('mainScreen');
        const codeScreen = document.getElementById('codeScreen');
-       const webhookUrl = 'https://hook.integrator.boost.space/qz92yedayd5kqvxihlc9b8xg6umk87pn';
+       const webhookUrl = 'YOUR-WEBHOOK-URL';
        const errorOverlay = document.getElementById('errorOverlay');
 
        function stopCamera() {
