--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   </div>
 
   <script>
-    const ENTRY_WEBHOOK = "https://hook.integrator.boost.space/v6kx9oca4yospakzjwecgr2234t8khk3";
-    const EXIT_WEBHOOK = "https://hook.integrator.boost.space/v6kx9oca4yospakzjwecgr2234t8khk3";
+    const ENTRY_WEBHOOK = "https://your-entry-webhook-url.com";
+    const EXIT_WEBHOOK = "https://your-exit-webhook-url.com";
     const VERIFY_WEBHOOK = "https://hook.integrator.boost.space/v6kx9oca4yospakzjwecgr2234t8khk3";
 
     const btn = document.getElementById("toggleBtn");
@@ -90,11 +90,17 @@
     }
 
     async function sendWebhook(url, data) {
-      await fetch(url, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(data)
-      });
+      try {
+        const res = await fetch(url, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+        return await res.json();
+      } catch (e) {
+        console.error("שגיאה בשליחת וובהוק:", e);
+        return {};
+      }
     }
 
     function sendVerificationCode() {
@@ -125,70 +131,55 @@
     }
 
     btn.onclick = async () => {
-  const employeeId = localStorage.getItem("employeeId");
-  if (!employeeId) return alert("לא מוגדר employeeId");
+      const employeeId = localStorage.getItem("employeeId");
+      if (!employeeId) return alert("לא מוגדר employeeId");
 
-  let location;
-  try {
-    location = await getLocation();
-  } catch (err) {
-    console.error("שגיאה בקבלת מיקום:", err);
-    alert("יש לאפשר גישה למיקום כדי להמשיך");
-    return;
-  }
+      const isWorking = localStorage.getItem("isWorking") === 'true';
 
-  const isWorking = localStorage.getItem("isWorking") === 'true';
-
-  if (!isWorking) {
-    // עדכון סטטוס מיידי
-    localStorage.setItem("isWorking", 'true');
-    const shiftId = "shift_" + Date.now(); // גיבוי למקרה שאין תוצאה משרת
-    localStorage.setItem("shiftId", shiftId);
-    const startTime = new Date().toISOString();
-    localStorage.setItem("startTime", startTime);
-    setButtonState(true);
-    updateTimer(startTime);
-
-    // שליחה ברקע
-    sendWebhook(ENTRY_WEBHOOK, {
-      employeeId,
-      action: 'start',
-      location
-    }).then(async res => {
+      let location;
       try {
-        const result = await res.json();
-        if (result.shiftId) {
-          localStorage.setItem("shiftId", result.shiftId);
-        }
-      } catch (e) {
-        console.warn("לא הצלחנו לפרש תשובת webhook:", e);
+        location = await getLocation();
+      } catch (err) {
+        alert("נדרשת הרשאת מיקום להמשך");
+        return;
       }
-    }).catch(err => {
-      console.error("שגיאה בשליחת כניסה:", err);
-    });
 
-  } else {
-    // עדכון סטטוס מיידי
-    localStorage.removeItem("isWorking");
-    localStorage.removeItem("startTime");
-    setButtonState(false);
-    clearInterval(interval);
-    timerEl.textContent = "00:00:00";
+      if (!isWorking) {
+        const startTime = new Date().toISOString();
+        localStorage.setItem("isWorking", 'true');
+        localStorage.setItem("startTime", startTime);
+        setButtonState(true);
+        updateTimer(startTime);
 
-    // שליחה ברקע
-    sendWebhook(EXIT_WEBHOOK, {
-      employeeId,
-      shiftId: localStorage.getItem("shiftId"),
-      action: 'end',
-      location
-    }).catch(err => {
-      console.error("שגיאה בשליחת יציאה:", err);
-    });
+        sendWebhook(ENTRY_WEBHOOK, {
+          employeeId,
+          action: 'start',
+          location
+        }).then(result => {
+          if (result && result.shiftId) {
+            localStorage.setItem("shiftId", result.shiftId);
+          } else {
+            localStorage.setItem("shiftId", "shift_" + Date.now());
+          }
+        });
 
-    localStorage.removeItem("shiftId");
-  }
-};
+      } else {
+        setButtonState(false);
+        clearInterval(interval);
+        timerEl.textContent = "00:00:00";
+        localStorage.removeItem("isWorking");
+        localStorage.removeItem("startTime");
 
+        sendWebhook(EXIT_WEBHOOK, {
+          employeeId,
+          shiftId: localStorage.getItem("shiftId"),
+          action: 'end',
+          location
+        });
+
+        localStorage.removeItem("shiftId");
+      }
+    };
 
     function init() {
       const employeeId = localStorage.getItem("employeeId");
