--- a/index.html
+++ b/index.html
@@ -1,201 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shift Tracker</title>
+  <meta charset="UTF-8">
+  <title>YouTube Embedded Player</title>
   <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    html, body {
       margin: 0;
-      font-family: sans-serif;
+      height: 100%;
+      background: #000;
     }
-    button {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
+    iframe {
+      width: 100%;
+      height: 100%;
       border: none;
-      font-size: 32px;
-      color: white;
-      background-color: green;
-    }
-    .stop {
-      background-color: red;
-    }
-    #timer {
-      margin-top: 20px;
-      font-size: 24px;
     }
   </style>
 </head>
 <body>
-  <div id="authSection" style="display: none; flex-direction: column; align-items: center;">
-    <input type="text" id="employeeCode" placeholder="הכנס קוד עובד" />
-    <button onclick="sendVerificationCode()">שלח קוד</button>
-    <input type="text" id="verificationCode" placeholder="הכנס קוד אימות" style="display:none; margin-top:10px;" />
-    <button id="verifyButton" onclick="verifyCode()" style="display:none;">אמת</button>
-  </div>
 
-  <div id="mainApp" style="display: none; flex-direction: column; align-items: center;">
-    <button id="toggleBtn">▶</button>
-    <div id="timer">00:00:00</div>
-  </div>
+<iframe
+  src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1&controls=1&rel=0&modestbranding=1&playsinline=1"
+  allow="autoplay; encrypted-media; picture-in-picture"
+  allowfullscreen>
+</iframe>
 
-  <script>
-    const ENTRY_WEBHOOK = "https://your-entry-webhook-url.com";
-    const EXIT_WEBHOOK = "https://your-exit-webhook-url.com";
-    const VERIFY_WEBHOOK = "https://hook.integrator.boost.space/v6kx9oca4yospakzjwecgr2234t8khk3";
-
-    const btn = document.getElementById("toggleBtn");
-    const timerEl = document.getElementById("timer");
-    const authSection = document.getElementById("authSection");
-    const mainApp = document.getElementById("mainApp");
-    const verificationInput = document.getElementById("verificationCode");
-    const verifyButton = document.getElementById("verifyButton");
-
-    let interval;
-    let generatedCode = null;
-    let tempEmployeeId = null;
-
-    function updateTimer(startTime) {
-      clearInterval(interval);
-      interval = setInterval(() => {
-        const elapsed = Date.now() - new Date(startTime);
-        const hours = String(Math.floor(elapsed / 3600000)).padStart(2, '0');
-        const minutes = String(Math.floor((elapsed % 3600000) / 60000)).padStart(2, '0');
-        const seconds = String(Math.floor((elapsed % 60000) / 1000)).padStart(2, '0');
-        timerEl.textContent = `${hours}:${minutes}:${seconds}`;
-      }, 1000);
-    }
-
-    function setButtonState(isWorking) {
-      btn.textContent = isWorking ? '■' : '▶';
-      btn.classList.toggle('stop', isWorking);
-    }
-
-    async function getLocation() {
-      return new Promise((resolve, reject) => {
-        navigator.geolocation.getCurrentPosition(
-          pos => resolve({
-            latitude: pos.coords.latitude,
-            longitude: pos.coords.longitude
-          }),
-          err => reject(err)
-        );
-      });
-    }
-
-    async function sendWebhook(url, data) {
-      try {
-        const res = await fetch(url, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-        return await res.json();
-      } catch (e) {
-        console.error("שגיאה בשליחת וובהוק:", e);
-        return {};
-      }
-    }
-
-    function sendVerificationCode() {
-      const id = document.getElementById("employeeCode").value.trim();
-      if (!id) return alert("אנא הזן קוד עובד");
-
-      generatedCode = String(Math.floor(100000 + Math.random() * 900000));
-      tempEmployeeId = id;
-
-      sendWebhook(VERIFY_WEBHOOK, {
-        employeeId: id,
-        code: generatedCode
-      });
-
-      verificationInput.style.display = "inline";
-      verifyButton.style.display = "inline";
-    }
-
-    function verifyCode() {
-      const enteredCode = verificationInput.value.trim();
-      if (enteredCode === generatedCode) {
-        localStorage.setItem("employeeId", tempEmployeeId);
-        authSection.style.display = "none";
-        mainApp.style.display = "flex";
-      } else {
-        alert("קוד שגוי, נסה שוב");
-      }
-    }
-
-    btn.onclick = async () => {
-      const employeeId = localStorage.getItem("employeeId");
-      if (!employeeId) return alert("לא מוגדר employeeId");
-
-      const isWorking = localStorage.getItem("isWorking") === 'true';
-
-      let location;
-      try {
-        location = await getLocation();
-      } catch (err) {
-        alert("נדרשת הרשאת מיקום להמשך");
-        return;
-      }
-
-      if (!isWorking) {
-        const startTime = new Date().toISOString();
-        localStorage.setItem("isWorking", 'true');
-        localStorage.setItem("startTime", startTime);
-        setButtonState(true);
-        updateTimer(startTime);
-
-        sendWebhook(ENTRY_WEBHOOK, {
-          employeeId,
-          action: 'start',
-          location
-        }).then(result => {
-          if (result && result.shiftId) {
-            localStorage.setItem("shiftId", result.shiftId);
-          } else {
-            localStorage.setItem("shiftId", "shift_" + Date.now());
-          }
-        });
-
-      } else {
-        setButtonState(false);
-        clearInterval(interval);
-        timerEl.textContent = "00:00:00";
-        localStorage.removeItem("isWorking");
-        localStorage.removeItem("startTime");
-
-        sendWebhook(EXIT_WEBHOOK, {
-          employeeId,
-          shiftId: localStorage.getItem("shiftId"),
-          action: 'end',
-          location
-        });
-
-        localStorage.removeItem("shiftId");
-      }
-    };
-
-    function init() {
-      const employeeId = localStorage.getItem("employeeId");
-      if (employeeId) {
-        authSection.style.display = "none";
-        mainApp.style.display = "flex";
-        if (localStorage.getItem("isWorking") === 'true') {
-          setButtonState(true);
-          updateTimer(localStorage.getItem("startTime"));
-        }
-      } else {
-        authSection.style.display = "flex";
-      }
-    }
-
-    init();
-  </script>
 </body>
 </html>
