--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <iframe
-  src="https://www.youtube.com/embed/VIDEO_ID?autoplay=1&controls=1&rel=0&modestbranding=1&playsinline=1"
+  src="https://www.youtube.com/embed"
   allow="autoplay; encrypted-media; picture-in-picture"
   allowfullscreen>
 </iframe>
