Update iframe src to point directly to YouTube

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <iframe
-  src="https://www.youtube.com/embed"
+  src="https://www.youtube.com"
   allow="autoplay; encrypted-media; picture-in-picture"
   allowfullscreen>
 </iframe>
